--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,57 @@
 /*
- * Modernizr adds either a .feature or .no-feature class to
- * the html element so you can target styles for when a feature
- * is supported or use the no-* class name when it's not.
+ * Here we're making sure :after/:before are
+ * supported via the .generatedcontent class.
+ * But this adds complexity and really isn't
+ * necessary.
  */
+
+.generatedcontent.no-flexbox .flex:after {
+  /* '/2718' is the unicode for the cross symbol */
+  content: '/2718';
+}
+.generatedcontent li:after {
+  /* '/2713' is the unicode for the tick symbol */
+  content: '\2713';
+}
+
+
+
+
+
+
+
+
+
 
 /* 
  * All flexbox supporting browsers will have these styles
  */
-
-
+.flexbox ul {
+  display: flex;
+}
 /*
  * Early firefox didn't support flexbox wrap.
  * Modernizr has a separate feature test for 
  * that.
  */
-
+.flexwrap ul {
+  flex-wrap: wrap;
+}
+.flexbox li {
+  flex: 0 0 150px;
+}
 
 /*
  * Applied for older browsers
  */
+.no-flexbox li {
+  float: left;
+  margin: 0 20px;
+}
+
+.no-flexbox .flex {
+  color: red;
+}
 
 
 
@@ -40,8 +73,6 @@ li {
   position: relative;
 }
 li:after {
-  /* '/2713' is the unicode for the tick symbol */
-  content: '\2713';
   position: absolute;
   right: 5px;
 }
